--- a/our-service.html
+++ b/our-service.html
@@ -121,13 +121,13 @@
 	<a href="#" class="menu-close" rel="nofollow" title="Close Menu"></a>
 	<ul class="level-1">
 		<li class="wnd-homepage">
-			<a class="menu-item" href="/index.html"><span class="menu-item-text">Inicio</span></a>
+			<a class="menu-item" href="index.html"><span class="menu-item-text">Inicio</span></a>
 			
 		</li><li class="wnd-active wnd-active-path">
-			<a class="menu-item" href="/our-service.html"><span class="menu-item-text">Sobre mí</span></a>
+			<a class="menu-item" href="our-service.html"><span class="menu-item-text">Sobre mí</span></a>
 			
 		</li><li>
-			<a class="menu-item" href="/testimonials.html"><span class="menu-item-text">Mis gustos</span></a>
+			<a class="menu-item" href="testimonials.html"><span class="menu-item-text">Mis gustos</span></a>
 			
 		</li>
 	</ul>
